@@ -77,6 +77,10 @@
                 <version>0.0.8</version>
                 <configuration>
                     <mainClass>com.evalpro.MainApp</mainClass>
+                    <options>
+                        <option>--add-modules</option>
+                        <option>javafx.controls,javafx.fxml</option>
+                    </options>
                 </configuration>
             </plugin>
         </plugins>
